Saving project for another device

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css"/>
     <title>Поздравления</title>
+    <script defer src="./Main.js"></script>
 </head>
 <body>
     <div class="title"><h1>Составь свое поздравление</h1></div>
