something to move

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <script defer src="./Main.js"></script>
 </head>
 <body>
+    <div class="choicebox"></div>
     <div class="title"><h1>Составь свое поздравление</h1></div>
     <div class="select">
-        <div class='choice' id="first">First</div>
+        <div class='choice' id="first">First<span>some</span></div>
         <div class='choice' id="second">Second</div>
         <div class='choice' id="third">Third</div>
     </div>
-    <div class="choicebox">show me</div>
+    
     <div class="button"><h1>Generate</h1></div>
 </body>
 </html>
